objects/Form_Field__c.object
<CustomObject>
    <fields>
        <fullName>APIRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked if the underlying field is required by the SFDC API. This is needed for the correct rendering of the Web Form editor.</description>
        <label>APIRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boolean_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_Value__c</fullName>
        <label>Currency Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateTime_Value__c</fullName>
        <label>DateTime Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Value__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Value__c</fullName>
        <label>Email Value</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field is checked, it will be hidden in the Web Form</description>
        <inlineHelpText>Check this field to hide it on the form. Hidden fields require a default value.</inlineHelpText>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Value__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Value__c</fullName>
        <label>Percent Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone_Value__c</fullName>
        <label>Phone Value</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PicklistEntries__c</fullName>
        <label>PicklistEntries</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Picklist_Value__c</fullName>
        <label>Picklist_Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this field is required or not.</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text_Area_Long_Value__c</fullName>
        <label>Text Area Long Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text_Area_Value__c</fullName>
        <label>Text Area Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text_Value__c</fullName>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Value__c</fullName>
        <label>URL Value</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Web_Form__c</fullName>
        <label>Web Form</label>
        <referenceTo>Web_Form__c</referenceTo>
        <relationshipLabel>Form Fields</relationshipLabel>
        <relationshipName>R00N70000002DiOrEAK</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <description>Will hold the width in pixels for this form field. Will default to 250 if nothing is filled in.</description>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Form Field</label>
    <nameField>
        <label>Form Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>